--- a/foundations/intro-to-css/01-css-methods/style.css
+++ b/foundations/intro-to-css/01-css-methods/style.css
@@ -1,7 +1,12 @@
-div{
-  background-color: red;
+p{
+  background-color: rgba(255, 0,0,0.2)
   color: white;
-  font-size: 32px;
-  font-weight: bold;
-  text-align: center;
+  font-family: "verdana, DejaVu Sans, sans-serif";
+  
 }
+
+div{
+  color: blue;
+  font-size: 36px;
+}
+
